# video-processor

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml  logging.ini  pyproject.toml  pytest.ini
.github/workflows/: ci_cd.yml
config/: video_processor.env.example
docker-entrypoint/: start_video_uploaded_listener.sh
k8s/: configmap.yml  deployment.yml  hpa.yml  namespace.yml  secrets.yml
tests/unit/adapters/inbound/: test_video_uploaded_listener.py
tests/unit/adapters/outbound/: test_frame_selectors.py  test_named_temp_file_manager.py  test_opencv_frame_extractor.py  test_opencv_video_metadata_reader.py  test_s3_input_storage.py  test_s3_output_storage.py  test_sns_event_publisher.py  test_video_validators.py  test_zip_frame_packager.py
tests/unit/domain/: test_entities.py
video_processor/adapters/inbound/: __init__.py  video_uploaded_listener.py
video_processor/adapters/outbound/: __init__.py  frame_selectors.py  local_input_storage.py  local_output_storage.py  named_temp_file_manager.py  opencv_frame_extractor.py  opencv_frame_processor.py  opencv_video_metadata_reader.py  print_event_publisher.py  s3_input_storage.py  s3_output_storage.py  sns_event_publisher.py  video_validators.py  zip_frame_packager.py
video_processor/application/: commands.py  use_cases.py
video_processor/domain/: entities.py  events.py  exceptions.py  ports.py  value_objects.py
video_processor/entrypoints/: video_uploaded_listener.py
video_processor/infrastructure/: config.py
(+1 files in other folders)
