[tool.poetry]
name = "video2frame-processor"
version = "0.1.0"
description = "The video processor microservice for Video2Frame Application"
authors = ["Lucas Martins Barroso <lucasmartins.av@gmail.com>"]
readme = "README.md"
packages = [{ include = "video_processor" }]

[tool.poetry.dependencies]
opencv-python = "^4.13.0.90"
pydantic = { extras = ["email"], version = "^2.12.5" }
pydantic-settings = "^2.12.0"
python = "^3.14"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.5.1"

[build-system]
requires = ["poetry-core>=2.3.0"]
build-backend = "poetry.core.masonry.api"
